# mrl

./: .gitignore  CMakeLists.txt
cmake/: MRLConfig.cmake.in
docs/: device.md  drawing.md  index_buffers.md  renderer.md  rendering.txt  shader.md  shader_pipelines.md  vertex_arrays.md  vertex_buffers.md
docs/shader/: types.md
include/mrl/: api_utils.h  d3d_11_render_device.h  deferred_renderer.h  effect.h  error.h  frame.h  mesh.h  ogl_330_render_device.h  render_device.h  renderer.h
include/mrl/ogl330/: ll_renderer.h
include/mrl/shader/: glsl_330_writer.h  lexer.h  parser.h  translator.h
include/mrl/vulkan/: ll_renderer.h
src/: main.c
src/examples/: d3d_11_moving_rect.c  glsl_330_shader_translator.c  ogl330_ll_renderer_direct.c  ogl_330_framebuffer.c  ogl_330_moving_rect.c  ogl_330_rect_texture.c  ogl_330_render_device.c  ogl_330_states.c
src/graphics/: frame.h
src/graphics/vulkan/: low_level_renderer.c  low_level_renderer.h
src/mrl/: d3d_11_render_device.c  deferred_renderer.c  error.c  ogl_330_render_device.c  render_device.c  renderer.c
src/mrl/ogl330/: ll_renderer.c
src/mrl/shader/: lexer.c
src/mrl/vulkan/: ll_renderer.c
